--- a/index.html
+++ b/index.html
@@ -15,8 +15,26 @@
             gtag('config', 'G-DERWVMJ868');
         </script>
     </head>
-
     <body>
+
+        <div class="preloader">
+            <div class="preloader-content">
+              <div class="logo-animation">
+                <span class="logo-part zozo">ZOZO</span>
+                <span class="logo-part securite">SÉCURITÉ</span>
+              </div>
+              <div class="security-animation">
+                <!-- Camera lens elements -->
+                <div class="lens-outer"></div>
+                <div class="lens-middle"></div>
+                <div class="lens-inner"></div>
+                <!-- Security scan lines -->
+                <div class="scan-line"></div>
+                <div class="scan-line delayed"></div>
+              </div>
+            </div>
+        </div>
+
         <!-- Cursor elements -->
         <div class="cursor"></div>
         <div class="cursor-dot"></div>
@@ -28,6 +46,47 @@
                 <span class="logo-securite">SÉCURITÉ</span>
             </div>
         </a>
+
+
+        <!-- Desktop Navigation -->
+<nav class="desktop-nav">
+    <div class="nav-container">
+        <div class="nav-links">
+            <a href="#services" class="nav-link">Services</a>
+            <a href="#realisations" class="nav-link">Réalisations</a>
+            <a href="#video-surveillance" class="nav-link">Expertise</a>
+        </div>
+        <div class="nav-contact-social">
+            <a href="tel:+33767563926" class="nav-contact">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
+                </svg>
+                07 67 56 39 26
+            </a>
+            <div class="nav-social-links">
+                <a href="https://wa.me/33767563926" target="_blank" rel="noopener" aria-label="WhatsApp">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/>
+                    </svg>
+                </a>
+                <a href="https://www.instagram.com/zozo_securite" target="_blank" rel="noopener" aria-label="Instagram">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <rect x="2" y="2" width="20" height="20" rx="5" ry="5"/>
+                        <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"/>
+                        <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/>
+                    </svg>
+                </a>
+                <a href="https://www.linkedin.com/in/zozo-sécurité" target="_blank" rel="noopener" aria-label="LinkedIn">
+                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/>
+                        <rect x="2" y="9" width="4" height="12"/>
+                        <circle cx="4" cy="4" r="2"/>
+                    </svg>
+                </a>
+            </div>
+        </div>
+    </div>
+</nav>
 
         
 
