--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <div class="service-cta">
                     <h3>Prêt à sécuriser votre espace ?</h3>
                     <p>Contactez-nous pour une étude personnalisée de vos besoins</p>
-                    <a href="#contact" class="cta-button">Demander un devis →</a>
+                    <a href="mailto:zozosecuritefr@gmail.com?subject=Demande%20de%20devis&body=Bonjour%2C%0A%0AJe%20souhaite%20obtenir%20un%20devis%20personnalisé%20pour%20vos%20services%20de%20sécurité.%0A%0AVoici%20quelques%20informations%20sur%20mon%20projet%20%3A%0A-%20Type%20de%20local%20%3A%0A-%20Surface%20approximative%20%3A%0A-%20Mes%20besoins%20%3A%0A%0AMerci%20de%20me%20contacter%20pour%20plus%20d'informations." class="cta-button">Demander un devis →</a>
                 </div>
             </div>
         </section>
