--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DERWVMJ868"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'G-DERWVMJ868');
-    </script>
+    <!-- Google Analytics - Scripts removed, will be loaded via JS based on consent -->
     <!-- SEO Meta Tags -->
     <meta name="description" content="ZOZO Sécurité - Installation & expert en réparation de systèmes de sécurité">
     <meta name="keywords" content="sécurité, vidéo surveillance, contrôle accès, interphones, alarmes, installation caméras">
@@ -528,6 +521,15 @@
         </form>
     </section>
 
+    <!-- Cookie Consent Banner -->
+    <div id="cookie-consent-banner" class="cookie-consent-banner">
+        <p>Ce site utilise des cookies pour améliorer l'expérience utilisateur et analyser le trafic. Acceptez-vous l'utilisation de cookies d'analyse ? <a href="/politique-confidentialite.html#cookies" target="_blank">En savoir plus</a></p>
+        <div class="cookie-buttons">
+            <button id="accept-cookies" class="cookie-button accept">Accepter</button>
+            <button id="reject-cookies" class="cookie-button reject">Refuser</button>
+        </div>
+    </div>
+
     <!-- Scroll to Top Button -->
     <button class="scroll-top" aria-label="Retour en haut">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -538,6 +540,10 @@
     <!-- Footer -->
     <footer class="site-footer">
         <p>&copy; 2025 Zozo Sécurité. Tous droits réservés.</p>
+        <p class="footer-links">
+            <a href="/mentions-legales.html">Mentions Légales</a> |
+            <a href="/politique-confidentialite.html">Politique de Confidentialité</a>
+        </p>
     </footer>
 
     <script src="./js/main.js"></script>
