--- a/index.html
+++ b/index.html
@@ -2,20 +2,112 @@
 <html lang="fr">
 
 <head>
+    <title>Installation vidéosurveillance Montpellier – Zozo Sécurité</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zozo Sécurité</title>
     <link rel="stylesheet" href="/css/styles.css">
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Google Analytics - Scripts removed, will be loaded via JS based on consent -->
     <!-- SEO Meta Tags -->
-    <meta name="description" content="ZOZO Sécurité - Installation & expert en réparation de systèmes de sécurité">
-    <meta name="keywords" content="sécurité, vidéo surveillance, contrôle accès, interphones, alarmes, installation caméras">
+    <meta name="description" content="Technicien indépendant spécialisé en installation de caméras IP, DVR/NVR et câblage structuré. Plus de 500 installations en Occitanie. Devis rapide : 07 69 61 56 21.">
+    <meta name="keywords" content="sécurité, vidéosurveillance, installation caméras, DVR, NVR, câblage réseau, baie de brassage, Montpellier">
     <meta property="og:title" content="ZOZO Sécurité">
     <meta property="og:description" content="Solutions de sécurité professionnelles">
     <meta property="og:image" content="images/og-image.jpg">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "ZOZO Sécurité",
+      "description": "ZOZO Sécurité - Installation de systèmes de vidéosurveillance, câblage & baies réseau. Expert en réparation de systèmes de sécurité.",
+      "telephone": "+33767563926",
+      "email": "zozosecuritefr@gmail.com",
+      "url": "https://www.zozosecurite.fr",
+      "image": "https://www.zozosecurite.fr/images/og-image.jpg",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "1 place charles de gaulle",
+        "addressLocality": "Castelnau-le-Lez",
+        "addressRegion": "Hérault",
+        "postalCode": "34170",
+        "addressCountry": "FR"
+      },
+      "areaServed": [
+        {
+          "@type": "City",
+          "name": "Paris"
+        },
+        {
+          "@type": "City",
+          "name": "Castelnau-le-Lez"
+        },
+        {
+          "@type": "City",
+          "name": "Montpellier"
+        },
+        {
+          "@type": "AdministrativeArea",
+          "name": "Île-de-France"
+        },
+        {
+          "@type": "AdministrativeArea",
+          "name": "Occitanie"
+        },
+        {
+          "@type": "AdministrativeArea",
+          "name": "Hérault"
+        }
+      ],
+      "makesOffer": [
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Installation de systèmes de vidéosurveillance",
+            "description": "Installation de caméras IP/TVI, DVR/NVR",
+            "serviceType": "Installation de systèmes de surveillance vidéo",
+            "provider": {
+                "@type": "LocalBusiness",
+                "name": "ZOZO Sécurité"
+            }
+          }
+        },
+        {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Câblage & baies réseau",
+            "description": "Conception et installation d'infrastructures réseaux fiables et performantes (Cat6, switchs) pour supporter vos systèmes de sécurité.",
+            "serviceType": "Installation d'infrastructure réseau",
+             "provider": {
+                "@type": "LocalBusiness",
+                "name": "ZOZO Sécurité"
+            }
+          }
+        }
+      ],
+      "sameAs": [
+        "https://wa.me/33767563926",
+        "https://www.instagram.com/zozo_securite",
+        "https://www.linkedin.com/in/zozo-sécurité-81a301253"
+      ],
+      "potentialAction": {
+        "@type": "ReserveAction",
+        "target": {
+          "@type": "EntryPoint",
+          "urlTemplate": "https://calendar.google.com/calendar/appointments/schedules/AcZssZ1uq3XNldlVkIyqdP6nE6Mrkbk6dAyTAFl6qYp4KJct5G0GeK5HQbD-UEY5NrWTdkZgklL-wR0W?gv=true",
+          "actionPlatform": [
+            "http://schema.org/DesktopWebPlatform",
+            "http://schema.org/IOSPlatform",
+            "http://schema.org/AndroidPlatform"
+          ]
+        },
+        "name": "Réserver un rendez-vous"
+      }
+    }
+    </script>
 </head>
 <body>
 
@@ -77,7 +169,7 @@
                             <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/>
                         </svg>
                     </a>
-                    <a href="https://www.linkedin.com/in/zozo-sécurité" target="_blank" rel="noopener" aria-label="LinkedIn">
+                    <a href="https://www.linkedin.com/in/zozo-sécurité-81a301253" target="_blank" rel="noopener" aria-label="LinkedIn">
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/>
                             <rect x="2" y="9" width="4" height="12"/>
@@ -117,7 +209,7 @@
         <div class="services-container">
             <h2 class="section-title">Nos Services</h2>
             <div class="services-grid">
-                <!-- Vidéo Surveillance -->
+                <!-- Vidéo Surveillance & DVR/NVR -->
                 <div class="service-card">
                     <div class="service-icon">
                         <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor"
@@ -126,38 +218,25 @@
                             <path d="M20 12c0-4.42-3.58-8-8-8s-8 3.58-8 8 3.58 8 8 8 8-3.58 8-8z" />
                         </svg>
                     </div>
-                    <h3>Vidéo Surveillance</h3>
-                    <p>Protection optimale de votre espace avec des systèmes de surveillance haute définition</p>
+                    <h3>Vidéosurveillance & DVR/NVR</h3>
+                    <p>Installation de caméras IP/TVI et enregistreurs DVR ou NVR avec accès distant.</p>
                     <a href="#contact-form-section" class="card-button">En savoir plus</a>
                 </div>
 
-                <!-- Contrôle Accès -->
+                <!-- Câblage & Baies réseau -->
                 <div class="service-card">
                     <div class="service-icon">
                         <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-width="2">
-                        <path
-                            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z" />
-                        <path
-                            d="M12 6c-3.31 0-6 2.69-6 6s2.69 6 6 6 6-2.69 6-6-2.69-6-6-6zm0 10c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4z" />
+                            <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                            <line x1="3" y1="9" x2="21" y2="9"></line>
+                            <line x1="3" y1="15" x2="21" y2="15"></line>
+                            <line x1="9" y1="3" x2="9" y2="21"></line>
+                            <line x1="15" y1="3" x2="15" y2="21"></line>
                         </svg>
                     </div>
-                    <h3>Contrôle Accès</h3>
-                    <p>Solutions de contrôle d'accès intelligentes pour une sécurité renforcée</p>
-                    <a href="#contact-form-section" class="card-button">En savoir plus</a>
-                </div>
-
-                <!-- Interphones -->
-                <div class="service-card">
-                    <div class="service-icon">
-                        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                            stroke-width="2">
-                            <path d="M20 10v4a8 8 0 1 1-16 0v-4" />
-                            <path d="M12 12v.01" />
-                        </svg>
-                    </div>
-                    <h3>Interphones</h3>
-                    <p>Systèmes d'interphonie modernes pour une communication sécurisée</p>
+                    <h3>Câblage & Baies réseau</h3>
+                    <p>Conception et montage de baies, switchs et câblage Cat.6 pour systèmes de sécurité.</p>
                     <a href="#contact-form-section" class="card-button">En savoir plus</a>
                 </div>
             </div>
@@ -172,74 +251,74 @@
                 <!-- First set of logos -->
                 <div class="partner-logo">
                     <a href="https://www.lidl.fr" target="_blank" rel="noopener">
-                        <img src="images/Lidl.png" alt="Lidl">
+                        <img src="images/Lidl.png" alt="Magasin Lidl – installation vidéosurveillance complète">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.but.fr" target="_blank" rel="noopener">
-                        <img src="images/BUT.png" alt="BUT">
+                        <img src="images/BUT.png" alt="Magasin BUT – installation système de sécurité">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.bulgari.com" target="_blank" rel="noopener">
-                        <img src="images/bvlgari.png" alt="Bvlgari">
+                        <img src="images/bvlgari.png" alt="Boutique Bulgari – mise en place sécurité avancée">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.sephora.fr" target="_blank" rel="noopener">
-                        <img src="images/sephora.png" alt="Sephora">
+                        <img src="images/sephora.png" alt="Magasin Sephora – solution de vidéosurveillance">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.aramisauto.com" target="_blank" rel="noopener">
-                        <img src="images/aramisauto.png" alt="Aramisauto">
+                        <img src="images/aramisauto.png" alt="Agence Aramisauto – installation caméras et alarme">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.le-kiosque-a-pizzas.com" target="_blank" rel="noopener">
-                        <img src="images/kiosque.png" alt="kiosque">
+                        <img src="images/kiosque.png" alt="Kiosque à Pizzas – système de sécurité compact">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.aldi.fr" target="_blank" rel="noopener">
-                        <img src="images/aldi.png" alt="Aldi">
+                        <img src="images/aldi.png" alt="Magasin Aldi – installation caméras de surveillance">
                     </a>
                 </div>
                 
                 <!-- Duplicate set for seamless carousel loop animation -->
                 <div class="partner-logo">
                     <a href="https://www.lidl.fr" target="_blank" rel="noopener">
-                        <img src="images/Lidl.png" alt="Lidl">
+                        <img src="images/Lidl.png" alt="Magasin Lidl – installation vidéosurveillance complète">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.but.fr" target="_blank" rel="noopener">
-                        <img src="images/BUT.png" alt="BUT">
+                        <img src="images/BUT.png" alt="Magasin BUT – installation système de sécurité">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.bulgari.com" target="_blank" rel="noopener">
-                        <img src="images/bvlgari.png" alt="Bvlgari">
+                        <img src="images/bvlgari.png" alt="Boutique Bulgari – mise en place sécurité avancée">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.sephora.fr" target="_blank" rel="noopener">
-                        <img src="images/sephora.png" alt="Sephora">
+                        <img src="images/sephora.png" alt="Magasin Sephora – solution de vidéosurveillance">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.aramisauto.com" target="_blank" rel="noopener">
-                        <img src="images/aramisauto.png" alt="Aramisauto">
+                        <img src="images/aramisauto.png" alt="Agence Aramisauto – installation caméras et alarme">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.le-kiosque-a-pizzas.com" target="_blank" rel="noopener">
-                        <img src="images/kiosque.png" alt="kiosque">
+                        <img src="images/kiosque.png" alt="Kiosque à Pizzas – système de sécurité compact">
                     </a>
                 </div>
                 <div class="partner-logo">
                     <a href="https://www.aldi.fr" target="_blank" rel="noopener">
-                        <img src="images/aldi.png" alt="Aldi">
+                        <img src="images/aldi.png" alt="Magasin Aldi – installation caméras de surveillance">
                     </a>
                 </div>
             </div>
@@ -291,7 +370,7 @@
                         <p>Années d'expérience</p>
                     </div>
                     <div class="exp-stat">
-                        <span class="exp-number" data-target="488">0</span>
+                        <span class="exp-number" data-target="700">0</span>
                         <p>Installations réussies</p>
                     </div>
                     <div class="exp-stat">
@@ -338,7 +417,7 @@
             <div class="slider">
                 <!-- Slides -->
                 <div class="slide">
-                    <img src="./images/image1.jpg" alt="Réalisation 1">
+                    <img src="./images/image1.jpg" alt="Installation vidéosurveillance commerce Montpellier">
                     <div class="slide-content">
                         <h3>Installation Vidéosurveillance</h3>
                         <p>Sécurité optimale, pour commerces et particuliers</p>
@@ -346,7 +425,7 @@
                 </div>
 
                 <div class="slide">
-                    <img src="./images/image2.jpg" alt="Réalisation 2">
+                    <img src="./images/image2.jpg" alt="Configuration réseau baie de brassage entreprise">
                     <div class="slide-content">
                         <h3>Configuration Réseau</h3>
                         <p>Sécurité optimale, pour commerces et particuliers</p>
@@ -354,7 +433,7 @@
                 </div>
 
                 <div class="slide">
-                    <img src="./images/image3.jpg" alt="Réalisation 3">
+                    <img src="./images/image3.jpg" alt="Caméra dôme surveillance extérieure résidence sécurisée">
                     <div class="slide-content">
                         <h3>Installation Vidéosurveillance</h3>
                         <p>Sécurité optimale, pour commerces et particuliers</p>
@@ -362,7 +441,7 @@
                 </div>
 
                 <div class="slide">
-                    <img src="./images/image4.jpg" alt="Réalisation 4">
+                    <img src="./images/image4.jpg" alt="Distribution de câbles réseau Cat.6 pour bureaux">
                     <div class="slide-content">
                         <h3>Distribution de Câbles</h3>
                         <p>Sécurité optimale, pour commerces et particuliers</p>
@@ -370,7 +449,7 @@
                 </div>
 
                 <div class="slide">
-                    <img src="./images/image5.jpg" alt="Réalisation 5">
+                    <img src="./images/image5.jpg" alt="Rack de brassage 48 ports et test câblage">
                     <div class="slide-content">
                         <h3>Rack de Brassage & Test de Câblage</h3>
                         <p>Sécurité optimale, pour commerces et particuliers</p>
@@ -378,7 +457,7 @@
                 </div>
 
                 <div class="slide">
-                    <img src="./images/image6.jpg" alt="Réalisation 6">
+                    <img src="./images/image6.jpg" alt="Installation caméra surveillance discrète magasin">
                     <div class="slide-content">
                         <h3>Installation Vidéosurveillance</h3>
                         <p>Sécurité optimale, pour commerces et particuliers</p>
@@ -386,7 +465,7 @@
                 </div>
 
                 <div class="slide">
-                    <img src="./images/image7.jpg" alt="Réalisation 7">
+                    <img src="./images/image7.jpg" alt="Vidéosurveillance NVR accès distant smartphone">
                     <div class="slide-content">
                         <h3>Installation Vidéosurveillance</h3>
                         <p>Sécurité optimale, pour commerces et particuliers</p>
@@ -471,7 +550,7 @@
                     <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"/>
                 </svg>
             </a>
-            <a href="https://www.linkedin.com/in/zozo-sécurité" target="_blank" rel="noopener" aria-label="LinkedIn">
+            <a href="https://www.linkedin.com/in/zozo-sécurité-81a301253" target="_blank" rel="noopener" aria-label="LinkedIn">
                 <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/>
                     <rect x="2" y="9" width="4" height="12"/>
