--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Installation vidéosurveillance Montpellier – Zozo Sécurité</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="canonical" href="https://www.zozosecurite.fr/index.html">
     <link rel="stylesheet" href="/css/styles.css">
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
@@ -37,19 +38,11 @@
       "areaServed": [
         {
           "@type": "City",
-          "name": "Paris"
-        },
-        {
-          "@type": "City",
           "name": "Castelnau-le-Lez"
         },
         {
           "@type": "City",
           "name": "Montpellier"
-        },
-        {
-          "@type": "AdministrativeArea",
-          "name": "Île-de-France"
         },
         {
           "@type": "AdministrativeArea",
@@ -488,18 +481,7 @@
                         <circle cx="12" cy="9" r="2.5" />
                     </svg>
                 </div>
-                <h4>Paris</h4>
-                <p>Île-de-France</p>
-            </div>
-
-            <div class="location-card">
-                <div class="location-icon">
-                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7z" />
-                        <circle cx="12" cy="9" r="2.5" />
-                    </svg>
-                </div>
-                <h4>Castelnau-le-Lez</h4>
+                <h4 id="castelnau-location">Castelnau-le-Lez</h4>
                 <p>Occitanie</p>
             </div>
         </div>
@@ -621,7 +603,8 @@
         <p>&copy; 2025 Zozo Sécurité. Tous droits réservés.</p>
         <p class="footer-links">
             <a href="/mentions-legales.html">Mentions Légales</a> |
-            <a href="/politique-confidentialite.html">Politique de Confidentialité</a>
+            <a href="/politique-confidentialite.html">Politique de Confidentialité</a> |
+            <a href="/faq.html">FAQ</a>
         </p>
     </footer>
 
