--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mentions Légales - Zozo Sécurité</title>
+    <meta name="description" content="Consultez les mentions légales de Zozo Sécurité, incluant les informations sur l'éditeur du site, l'hébergement et la direction de la publication.">
+    <link rel="canonical" href="https://www.zozosecurite.fr/mentions-legales.html">
     <link rel="stylesheet" href="/css/styles.css"> <!-- Link to your main CSS -->
     <style>
         /* Add some basic styling for readability */
