--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Politique de Confidentialité - Zozo Sécurité</title>
+    <meta name="description" content="Découvrez comment Zozo Sécurité collecte, utilise et protège vos données personnelles. Informations conformes au RGPD.">
+    <link rel="canonical" href="https://www.zozosecurite.fr/politique-confidentialite.html">
     <link rel="stylesheet" href="/css/styles.css"> <!-- Link to your main CSS -->
     <style>
         /* Add some basic styling for readability */
