--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <!-- Services Section -->
     <section id="services" class="services-section">
         <div class="services-container">
-            <h2 class="section-title">Nos Services</h2>
+            <h2 class="section-title"><span class="highlight-text">Nos</span> Services</h2>
             <div class="services-grid">
                 <!-- Vidéo Surveillance & DVR/NVR -->
                 <div class="service-card">
@@ -225,7 +225,7 @@
 
     <!-- Partners Section -->
     <section class="partners-section">
-        <h2 class="section-title">Ils nous font confiance</h2>
+        <h2 class="section-title">Ils nous font <span class="highlight-text underline-serious">confiance</span></h2>
         <div class="logo-carousel">
             <div class="logo-track">
                 <!-- First set of logos -->
@@ -335,10 +335,14 @@
             <div class="brands-section">
                 <h3>Nos Partenaires</h3>
                 <div class="brands-grid">
-                    <div class="brand-card">Hikvision</div>
-                    <div class="brand-card">Dahua</div>
-                    <div class="brand-card">Axis</div>
-                    <div class="brand-card">Bosch</div>
+                    <div class="brand-card">
+                        <img src="images/Hikvision.png" alt="Logo Hikvision" class="brand-logo">
+                        <span>Hikvision</span>
+                    </div>
+                    <div class="brand-card">
+                        <img src="images/Dahua.svg" alt="Logo Dahua" class="brand-logo">
+                        <span>Dahua</span>
+                    </div>
                 </div>
             </div>
 
@@ -361,7 +365,7 @@
             </div>
 
             <div class="projects-section">
-                <h3>Nos Réalisations</h3>
+                <h3>Nos <span class="highlight-text">Zones</span> d’Expertise</h3>
                 <div class="project-types">
                     <div class="project-type">
                         <h4>Résidentiel</h4>
