--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -6,7 +6,7 @@
     <title>Mentions Légales - Zozo Sécurité</title>
     <meta name="description" content="Consultez les mentions légales de Zozo Sécurité, incluant les informations sur l'éditeur du site, l'hébergement et la direction de la publication.">
     <link rel="canonical" href="https://www.zozosecurite.fr/mentions-legales.html">
-    <link rel="stylesheet" href="/css/styles.css"> <!-- Link to your main CSS -->
+    <link rel="stylesheet" href="css/styles.css?v=1.0"> <!-- Link to your main CSS -->
     <style>
         /* Add some basic styling for readability */
         body { padding: 2rem; line-height: 1.6; color: #eee; background-color: #1a1a1a; } /* Adjusted for dark theme */
@@ -48,7 +48,7 @@
         <p>Par courrier : 1 place Charles de Gaulle, 34170 Castelnau-le-Lez, France</p>
 
         <h2>Données personnelles</h2>
-        <p>Le traitement de vos données à caractère personnel est régi par notre Politique de Confidentialité, disponible <a href="/politique-confidentialite.html">ici</a>, conformément au Règlement Général sur la Protection des Données (RGPD) 2016/679 du 27 avril 2016.</p>
+        <p>Le traitement de vos données à caractère personnel est régi par notre Politique de Confidentialité, disponible <a href="politique-confidentialite.html">ici</a>, conformément au Règlement Général sur la Protection des Données (RGPD) 2016/679 du 27 avril 2016.</p>
 
     </div>
 </body>
