--- a/faq.html
+++ b/faq.html
@@ -6,9 +6,9 @@
     <title>FAQ vidéosurveillance | Zozo Sécurité Montpellier</title>
     <meta name="description" content="Réponses prix, légalité, maintenance des caméras de surveillance en Occitanie.">
     <link rel="canonical" href="https://www.zozosecurite.fr/faq.html">
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
     <script type="application/ld+json">
     {
@@ -31,7 +31,7 @@
 </head>
 <body>
     <!-- Logo -->
-    <a href="/index.html#accueil" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
+    <a href="index.html#accueil" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
         <div class="logo-text">
             <span class="logo-zozo">ZOZO</span>
             <span class="logo-securite">SÉCURITÉ</span>
@@ -42,9 +42,9 @@
     <nav class="desktop-nav">
         <div class="nav-container">
             <div class="nav-links">
-                <a href="/index.html#services" class="nav-link">Services</a>
-                <a href="/index.html#realisations" class="nav-link">Réalisations</a>
-                <a href="/index.html#video-surveillance" class="nav-link">Expertise</a>
+                <a href="index.html#services" class="nav-link">Services</a>
+                <a href="index.html#video-surveillance" class="nav-link">Expertise</a>
+                <a href="index.html#realisations" class="nav-link">Réalisations</a>
             </div>
             <div class="nav-contact-social">
                 <a href="tel:+33767563926" class="nav-contact" aria-label="Appeler au 07 67 56 39 26">
@@ -89,9 +89,9 @@
     
     <!-- Mobile Navigation -->
     <nav class="mobile-nav">
-        <a href="/index.html#services" class="nav-link">Services</a>
-        <a href="/index.html#realisations" class="nav-link">Réalisations</a>
-        <a href="/index.html#video-surveillance" class="nav-link">Expertise</a>
+        <a href="index.html#services" class="nav-link">Services</a>
+        <a href="index.html#video-surveillance" class="nav-link">Expertise</a>
+        <a href="index.html#realisations" class="nav-link">Réalisations</a>
 
         <a href="tel:+33767563926" class="mobile-contact-link nav-link" aria-label="Appeler au 07 67 56 39 26">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="vertical-align: middle; margin-right: 0.5rem;">
@@ -201,14 +201,14 @@
         </section>
 
         <section class="cta-section">
-            <a href="/index.html#contact-form-section" class="cta-button">Encore une question ? Contactez-nous →</a>
+            <a href="index.html#contact-form-section" class="cta-button">Encore une question ? Contactez-nous →</a>
         </section>
     </main>
 
     <footer class="site-footer">
-        <p>&copy; 2025 Zozo Sécurité • <a href="/index.html">Accueil</a></p>
+        <p>&copy; 2025 Zozo Sécurité • <a href="index.html">Accueil</a></p>
     </footer>
 
-    <script src="/js/main.js"></script> 
+    <script src="js/main.js"></script> 
 </body>
 </html>
