--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://www.zozosecurite.fr/index.html">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css?v=1.0">
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -26,7 +26,7 @@
       "telephone": "+33767563926",
       "email": "zozosecuritefr@gmail.com",
       "url": "https://www.zozosecurite.fr",
-      "image": "https://www.zozosecurite.fr/images/og-image.jpg",
+      "image": "images/og-image.jpg",
       "address": {
         "@type": "PostalAddress",
         "streetAddress": "1 place charles de gaulle",
@@ -121,8 +121,8 @@
         <div class="nav-container">
             <div class="nav-links">
                 <a href="#services" class="nav-link">Services</a>
-                <a href="#realisations" class="nav-link">Réalisations</a>
                 <a href="#video-surveillance" class="nav-link">Expertise</a>
+                <a href="#realisations" class="nav-link">Réalisations</a>
             </div>
             <div class="nav-contact-social">
                 <a href="tel:+33767563926" class="nav-contact" aria-label="Appeler au 07 67 56 39 26">
@@ -401,7 +401,7 @@
             <div class="slider">
                 <!-- Slides -->
                 <div class="slide">
-                    <img src="./images/image1.jpg" alt="Installation vidéosurveillance commerce Montpellier">
+                    <img src="images/image1.jpg" alt="Installation vidéosurveillance commerce Montpellier">
                     <div class="slide-content">
                         <h3>Installation Vidéosurveillance</h3>
                         <p>Sécurité optimale, pour commerces et particuliers</p>
@@ -409,7 +409,7 @@
                 </div>
 
                 <div class="slide">
-                    <img src="./images/image2.jpg" alt="Configuration réseau baie de brassage entreprise">
+                    <img src="images/image2.jpg" alt="Configuration réseau baie de brassage entreprise">
                     <div class="slide-content">
                         <h3>Configuration Réseau</h3>
                         <p>Sécurité optimale, pour commerces et particuliers</p>
@@ -417,7 +417,7 @@
                 </div>
 
                 <div class="slide">
-                    <img src="./images/image3.jpg" alt="Caméra dôme surveillance extérieure résidence sécurisée">
+                    <img src="images/image3.jpg" alt="Caméra dôme surveillance extérieure résidence sécurisée">
                     <div class="slide-content">
                         <h3>Installation Vidéosurveillance</h3>
                         <p>Sécurité optimale, pour commerces et particuliers</p>
@@ -425,7 +425,7 @@
                 </div>
 
                 <div class="slide">
-                    <img src="./images/image4.jpg" alt="Distribution de câbles réseau Cat.6 pour bureaux">
+                    <img src="images/image4.jpg" alt="Distribution de câbles réseau Cat.6 pour bureaux">
                     <div class="slide-content">
                         <h3>Distribution de Câbles</h3>
                         <p>Sécurité optimale, pour commerces et particuliers</p>
@@ -433,7 +433,7 @@
                 </div>
 
                 <div class="slide">
-                    <img src="./images/image5.jpg" alt="Rack de brassage 48 ports et test câblage">
+                    <img src="images/image5.jpg" alt="Rack de brassage 48 ports et test câblage">
                     <div class="slide-content">
                         <h3>Rack de Brassage & Test de Câblage</h3>
                         <p>Sécurité optimale, pour commerces et particuliers</p>
@@ -441,7 +441,7 @@
                 </div>
 
                 <div class="slide">
-                    <img src="./images/image6.jpg" alt="Installation caméra surveillance discrète magasin">
+                    <img src="images/image6.jpg" alt="Installation caméra surveillance discrète magasin">
                     <div class="slide-content">
                         <h3>Installation Vidéosurveillance</h3>
                         <p>Sécurité optimale, pour commerces et particuliers</p>
@@ -449,7 +449,7 @@
                 </div>
 
                 <div class="slide">
-                    <img src="./images/image7.jpg" alt="Vidéosurveillance NVR accès distant smartphone">
+                    <img src="images/image7.jpg" alt="Vidéosurveillance NVR accès distant smartphone">
                     <div class="slide-content">
                         <h3>Installation Vidéosurveillance</h3>
                         <p>Sécurité optimale, pour commerces et particuliers</p>
@@ -500,8 +500,8 @@
     <!-- Mobile Navigation -->
     <nav class="mobile-nav">
         <a href="#services" class="nav-link">Services</a>
-        <a href="#realisations" class="nav-link">Réalisations</a>
         <a href="#video-surveillance" class="nav-link">Expertise</a>
+        <a href="#realisations" class="nav-link">Réalisations</a>
 
         <a href="tel:+33767563926" class="mobile-contact-link nav-link" aria-label="Appeler au 07 67 56 39 26">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="vertical-align: middle; margin-right: 0.5rem;">
@@ -536,7 +536,7 @@
     <!-- Contact Form Section -->
 
     <section id="contact-form-section" class="contact-form-section section-transition">
-        <h2 class="section-title">Contactez-nous</h2>
+        <h2 class="section-title"><span class="highlight-contactez">CONTACTEZ</span>-NOUS</h2>
         <p class="section-subtitle">Envoyez-nous un message directement via le formulaire ci-dessous.</p>
         
         <!-- Formspree Endpoint -->
@@ -575,7 +575,7 @@
 
     <!-- Cookie Consent Banner -->
     <div id="cookie-consent-banner" class="cookie-consent-banner">
-        <p>Ce site utilise des cookies pour améliorer l'expérience utilisateur et analyser le trafic. Acceptez-vous l'utilisation de cookies d'analyse ? <a href="/politique-confidentialite.html#cookies" target="_blank">En savoir plus</a></p>
+        <p>Ce site utilise des cookies pour améliorer l'expérience utilisateur et analyser le trafic. Acceptez-vous l'utilisation de cookies d'analyse ? <a href="politique-confidentialite.html#cookies" target="_blank">En savoir plus</a></p>
         <div class="cookie-buttons">
             <button id="accept-cookies" class="cookie-button accept">Accepter</button>
             <button id="reject-cookies" class="cookie-button reject">Refuser</button>
@@ -593,12 +593,12 @@
     <footer class="site-footer">
         <p>&copy; 2025 Zozo Sécurité. Tous droits réservés.</p>
         <p class="footer-links">
-            <a href="/mentions-legales.html">Mentions Légales</a> |
-            <a href="/politique-confidentialite.html">Politique de Confidentialité</a> |
-            <a href="/faq.html">FAQ</a>
+            <a href="mentions-legales.html">Mentions Légales</a> |
+            <a href="politique-confidentialite.html">Politique de Confidentialité</a> |
+            <a href="faq.html">FAQ</a>
         </p>
     </footer>
 
-    <script src="./js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
