--- a/thank-you.html
+++ b/thank-you.html
@@ -5,7 +5,7 @@
     <title>Merci - Zozo Sécurité</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css?v=1.0">
     <meta name="robots" content="noindex, nofollow"> <!-- Important for thank you pages -->
 </head>
 
@@ -16,7 +16,7 @@
     <div class="cursor-dot"></div>
 
     <!-- Logo -->
-    <a href="/index.html#accueil" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
+    <a href="index.html#accueil" class="site-logo" ontouchstart="this.classList.add('touched')" ontouchend="this.classList.remove('touched')">
         <div class="logo-text">
             <span class="logo-zozo">ZOZO</span>
             <span class="logo-securite">SÉCURITÉ</span>
@@ -27,9 +27,9 @@
     <nav class="desktop-nav">
         <div class="nav-container">
             <div class="nav-links">
-                <a href="/index.html#services" class="nav-link">Services</a>
-                <a href="/index.html#realisations" class="nav-link">Réalisations</a>
-                <a href="/index.html#video-surveillance" class="nav-link">Expertise</a>
+                <a href="index.html#services" class="nav-link">Services</a>
+                <a href="index.html#video-surveillance" class="nav-link">Expertise</a>
+                <a href="index.html#realisations" class="nav-link">Réalisations</a>
             </div>
             <div class="nav-contact-social">
                 <a href="tel:+33767563926" class="nav-contact" aria-label="Appeler au 07 67 56 39 26">
@@ -74,9 +74,9 @@
     
     <!-- Mobile Navigation -->
     <nav class="mobile-nav">
-        <a href="/index.html#services" class="nav-link">Services</a>
-        <a href="/index.html#realisations" class="nav-link">Réalisations</a>
-        <a href="/index.html#video-surveillance" class="nav-link">Expertise</a>
+        <a href="index.html#services" class="nav-link">Services</a>
+        <a href="index.html#video-surveillance" class="nav-link">Expertise</a>
+        <a href="index.html#realisations" class="nav-link">Réalisations</a>
 
         <a href="tel:+33767563926" class="mobile-contact-link nav-link" aria-label="Appeler au 07 67 56 39 26">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="vertical-align: middle; margin-right: 0.5rem;">
@@ -115,7 +115,7 @@
             <h1 class="thank-you-title">Merci !</h1>
             <p class="thank-you-subtitle">Votre message a bien été envoyé. Nous vous répondrons dans les plus brefs délais.</p>
             <div class="cta-buttons">
-                <a href="/index.html" class="main-cta">Retour à l'accueil</a>
+                <a href="index.html" class="main-cta">Retour à l'accueil</a>
             </div>
         </div>
     </section>
@@ -124,12 +124,12 @@
     <footer class="site-footer">
         <p>&copy; 2025 Zozo Sécurité. Tous droits réservés.</p>
         <p class="footer-links">
-            <a href="/mentions-legales.html">Mentions Légales</a> |
-            <a href="/politique-confidentialite.html">Politique de Confidentialité</a> |
-            <a href="/faq.html">FAQ</a>
+            <a href="mentions-legales.html">Mentions Légales</a> |
+            <a href="politique-confidentialite.html">Politique de Confidentialité</a> |
+            <a href="faq.html">FAQ</a>
         </p>
     </footer>
 
-    <script src="./js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
