--- a/faq.html
+++ b/faq.html
@@ -6,7 +6,7 @@
     <title>FAQ vidéosurveillance | Zozo Sécurité Montpellier</title>
     <meta name="description" content="Réponses prix, légalité, maintenance des caméras de surveillance en Occitanie.">
     <link rel="canonical" href="https://www.zozosecurite.fr/faq.html">
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="css/styles.css?v=2.1">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 
@@ -125,6 +125,12 @@
 
     <header class="hero hero-small">
       <h1 class="hero-title">Foire aux questions – Vidéosurveillance</h1>
+      <section class="faq-intro-section">
+            <div class="faq-intro-content">
+                <h2 class="faq-intro-title">Questions fréquentes sur la vidéosurveillance</h2>
+                <p class="faq-intro-description">Retrouvez toutes les réponses aux questions les plus courantes concernant l'installation, la réglementation, les coûts et la maintenance de vos systèmes de vidéosurveillance en Occitanie.</p>
+            </div>
+        </section>
     </header>
 
     <main class="faq-page-container">
