--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://www.zozosecurite.fr/index.html">
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="css/styles.css?v=2.1">
     <!-- Favicon -->
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
@@ -200,7 +200,7 @@
                     </div>
                     <h3>Vidéosurveillance & DVR/NVR</h3>
                     <p>Installation de caméras IP/TVI et enregistreurs DVR ou NVR avec accès distant.</p>
-                    <a href="#contact-form-section" class="card-button">En savoir plus</a>
+                    <a href="services/videosurveillance.html" class="card-button">En savoir plus</a>
                 </div>
 
                 <!-- Câblage & Baies réseau -->
