added google lead form tracking

--- a/thank-you.html
+++ b/thank-you.html
@@ -6,6 +6,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css?v=2.1">
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DERWVMJ868"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-DERWVMJ868');
+    </script>
+    
     <meta name="robots" content="noindex, nofollow"> <!-- Important for thank you pages -->
 </head>
 
