adding horizantal gradient

--- a/faq.html
+++ b/faq.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Réponses prix, légalité, maintenance des caméras de surveillance en Occitanie.">
     <link rel="canonical" href="https://www.zozosecurite.fr/faq.html">
     <link rel="stylesheet" href="css/styles.css?v=2.1">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
 
     <script type="application/ld+json">
     {
@@ -45,6 +45,7 @@
                 <a href="index.html#services" class="nav-link">Services</a>
                 <a href="index.html#video-surveillance" class="nav-link">Expertise</a>
                 <a href="index.html#realisations" class="nav-link">Réalisations</a>
+                <a href="contact.html" class="nav-link">Contact</a>
             </div>
             <div class="nav-contact-social">
                 <a href="tel:+33767563926" class="nav-contact" aria-label="Appeler au 07 67 56 39 26">
@@ -207,7 +208,7 @@
         </section>
 
         <section class="cta-section">
-            <a href="index.html#contact-form-section" class="cta-button">Encore une question ? Contactez-nous →</a>
+            <a href="contact.html" class="cta-button">Encore une question ? Contactez-nous →</a>
         </section>
     </main>
 
