--- a/services/videosurveillance.html
+++ b/services/videosurveillance.html
@@ -7,9 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://www.zozosecurite.fr/services/videosurveillance.html">
     <link rel="stylesheet" href="../css/styles.css?v=2.1">
+    <link rel="stylesheet" href="css/videosurveillance.css"> 
     <!-- Favicon -->
-    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
     <!-- SEO Meta Tags -->
     <meta name="description" content="Expert en installation vidéosurveillance : caméras IP 4K, systèmes DVR/NVR, intelligence artificielle, détection thermique. Solutions professionnelles pour commerces et résidences.">
     <meta name="keywords" content="vidéosurveillance, caméras IP, DVR, NVR, installation sécurité, Hikvision, Dahua, intelligence artificielle, détection thermique">
@@ -38,6 +39,7 @@
                 <a href="../index.html#services" class="nav-link">Services</a>
                 <a href="../index.html#video-surveillance" class="nav-link">Expertise</a>
                 <a href="../index.html#realisations" class="nav-link">Réalisations</a>
+                <a href="../contact.html" class="nav-link">Contact</a>
             </div>
             <div class="nav-contact-social">
                 <a href="tel:+33767563926" class="nav-contact" aria-label="Appeler au 07 67 56 39 26">
@@ -439,7 +441,7 @@
             <h3>Prêt à Sécuriser Votre Espace ?</h3>
             <p>Contactez-nous pour une étude personnalisée de vos besoins en vidéosurveillance</p>
             <div class="cta-buttons" style="display: flex; justify-content: center; align-items: center; gap: 1rem;">
-                <a href="../index.html#contact-form-section" class="main-cta">Demander un devis →</a>
+                <a href="../contact.html" class="main-cta">Demander un devis →</a>
                 <a href="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1uq3XNldlVkIyqdP6nE6Mrkbk6dAyTAFl6qYp4KJct5G0GeK5HQbD-UEY5NrWTdkZgklL-wR0W?gv=true" target="_blank" rel="noopener" class="schedule-button">Réserver un rendez-vous →</a>
             </div>
         </div>
