--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Consultez les mentions légales de Zozo Sécurité, incluant les informations sur l'éditeur du site, l'hébergement et la direction de la publication.">
     <link rel="canonical" href="https://www.zozosecurite.fr/mentions-legales.html">
     <link rel="stylesheet" href="css/styles.css?v=2.1"> <!-- Link to your main CSS -->
+    <link rel="icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
     <style>
         /* Add some basic styling for readability */
         body { padding: 2rem; line-height: 1.6; color: #eee; background-color: #1a1a1a; } /* Adjusted for dark theme */
@@ -14,6 +16,27 @@
         .content { max-width: 800px; margin: 2rem auto; background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.1); padding: 2rem; border-radius: 20px; }
         a { color: #FF5555; }
         a:hover { color: #FF8888; }
+        .back-button {
+            display: inline-block;
+            padding: 12px 24px;
+            background: linear-gradient(135deg, #FF3333, #FF5555);
+            color: white;
+            text-decoration: none;
+            border-radius: 25px;
+            font-weight: bold;
+            text-align: center;
+            transition: all 0.3s ease;
+            margin: 20px 0;
+            box-shadow: 0 4px 15px rgba(255, 51, 51, 0.3);
+        }
+        .back-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(255, 51, 51, 0.4);
+            color: white;
+        }
+        .back-button:before {
+            content: "← ";
+        }
     </style>
 </head>
 <body>
@@ -50,6 +73,9 @@
         <h2>Données personnelles</h2>
         <p>Le traitement de vos données à caractère personnel est régi par notre Politique de Confidentialité, disponible <a href="politique-confidentialite.html">ici</a>, conformément au Règlement Général sur la Protection des Données (RGPD) 2016/679 du 27 avril 2016.</p>
 
+        <div style="text-align: center; margin-top: 30px;">
+            <a href="index.html" class="back-button">Retour à l'accueil</a>
+        </div>
     </div>
 </body>
 </html>
