--- a/politique-confidentialite.html
+++ b/politique-confidentialite.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Découvrez comment Zozo Sécurité collecte, utilise et protège vos données personnelles. Informations conformes au RGPD.">
     <link rel="canonical" href="https://www.zozosecurite.fr/politique-confidentialite.html">
     <link rel="stylesheet" href="css/styles.css?v=2.1"> <!-- Link to your main CSS -->
+    <link rel="icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
     <style>
         /* Add some basic styling for readability */
         body { padding: 2rem; line-height: 1.6; color: #eee; background-color: #1a1a1a; } /* Adjusted for dark theme */
@@ -15,6 +17,27 @@
         a { color: #FF5555; }
         a:hover { color: #FF8888; }
         ul { margin-left: 2rem; }
+        .back-button {
+            display: inline-block;
+            padding: 12px 24px;
+            background: linear-gradient(135deg, #FF3333, #FF5555);
+            color: white;
+            text-decoration: none;
+            border-radius: 25px;
+            font-weight: bold;
+            text-align: center;
+            transition: all 0.3s ease;
+            margin: 20px 0;
+            box-shadow: 0 4px 15px rgba(255, 51, 51, 0.3);
+        }
+        .back-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 6px 20px rgba(255, 51, 51, 0.4);
+            color: white;
+        }
+        .back-button:before {
+            content: "← ";
+        }
     </style>
 </head>
 <body>
@@ -91,6 +114,9 @@
         <h2>10. Modifications de la politique de confidentialité</h2>
         <p>Nous nous réservons le droit de modifier cette politique de confidentialité à tout moment. Les modifications prendront effet immédiatement après leur publication sur le site Web. Nous vous encourageons à consulter régulièrement cette page pour prendre connaissance des éventuelles modifications.</p>
 
+        <div style="text-align: center; margin-top: 30px;">
+            <a href="index.html" class="back-button">Retour à l'accueil</a>
+        </div>
     </div>
 </body>
 </html>
