--- a/thank-you.html
+++ b/thank-you.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css?v=2.1">
     
+    <!-- Favicon -->
+    <link rel="icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
+
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-DERWVMJ868"></script>
     <script>
@@ -41,6 +45,7 @@
                 <a href="index.html#services" class="nav-link">Services</a>
                 <a href="index.html#video-surveillance" class="nav-link">Expertise</a>
                 <a href="index.html#realisations" class="nav-link">Réalisations</a>
+                <a href="contact.html" class="nav-link">Contact</a>
             </div>
             <div class="nav-contact-social">
                 <a href="tel:+33767563926" class="nav-contact" aria-label="Appeler au 07 67 56 39 26">
