--- a/services/videosurveillance.html
+++ b/services/videosurveillance.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://www.zozosecurite.fr/services/videosurveillance.html">
     <link rel="stylesheet" href="../css/styles.css?v=2.1">
-    <link rel="stylesheet" href="css/videosurveillance.css"> 
+    <link rel="stylesheet" href="../css/videosurveillance.css"> 
     <!-- Favicon -->
     <link rel="icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
     <link rel="shortcut icon" href="../images/zozosécuritélogo.ico" type="image/x-icon">
