deploying on june 15 2025

--- a/contact.html
+++ b/contact.html
@@ -214,6 +214,8 @@
         <div class="contact-form-container">
             <div class="contact-form-wrapper">
                 <form id="secure-contact-form" action="https://formspree.io/f/mblojdjg" method="POST" class="contact-form">
+                    <!-- Redirect to thank-you page after form submission -->
+                    <input type="hidden" name="_next" value="https://www.zozosecurite.fr/thank-you.html">
                         <div class="form-row">
                             <div class="form-group half-width">
                                 <label for="name">Nom complet *</label>
@@ -365,7 +367,7 @@
                 <details class="contact-faq-item">
                     <summary>Quels sont vos délais d'intervention ?</summary>
                     <div class="contact-faq-content">
-                        <p>Pour les installations standard, comptez entre 1 à 2 semaines après validation du devis. Pour les urgences sur systèmes existants, nous intervenons sous 48h.</p>
+                        <p>Pour les installations standard, comptez environ 1 semaine après validation du devis. Si le matériel est déjà disponible, l'intervention peut être encore plus rapide. Pour les urgences sur systèmes existants, nous intervenons sous 48h.</p>
                     </div>
                 </details>
 
