--- a/faq.html
+++ b/faq.html
@@ -12,6 +12,16 @@
     <link rel="icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
     <link rel="shortcut icon" href="images/zozosécuritélogo.ico" type="image/x-icon">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DERWVMJ868"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-DERWVMJ868');
+    </script>
+    
     <!-- Google Ads Conversion Tracking -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17068094203"></script>
     <script>
@@ -23,7 +33,7 @@
       gtag('config', 'AW-17068094203');
       
       // Phone conversion tracking configuration
-      gtag('config', 'AW-17068094203/D7kOCPPH5tAaEPvl2co_', {
+      gtag('config', 'AW-17068094203/nJvOCMX-_OQaEPvl2co_', {
         'phone_conversion_number': '0767563926'
       });
     </script>
@@ -66,7 +76,7 @@
                 <a href="contact.html" class="nav-link">Contact</a>
             </div>
             <div class="nav-contact-social">
-                <a href="tel:+33767563926" class="nav-contact" aria-label="Appeler au 07 67 56 39 26" onclick="gtag('event', 'conversion', {'send_to': 'AW-17068094203/D7kOCPPH5tAaEPvl2co_'});">
+                <a href="tel:+33767563926" class="nav-contact" aria-label="Appeler au 07 67 56 39 26" onclick="gtag('event', 'conversion', {'send_to': 'AW-17068094203/nJvOCMX-_OQaEPvl2co_'});">
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
                     </svg>
@@ -100,7 +110,7 @@
         <a href="index.html#video-surveillance" class="nav-link">Expertise</a>
         <a href="index.html#realisations" class="nav-link">Réalisations</a>
 
-        <a href="tel:+33767563926" class="mobile-contact-link nav-link" aria-label="Appeler au 07 67 56 39 26" onclick="gtag('event', 'conversion', {'send_to': 'AW-17068094203/D7kOCPPH5tAaEPvl2co_'});">
+        <a href="tel:+33767563926" class="mobile-contact-link nav-link" aria-label="Appeler au 07 67 56 39 26" onclick="gtag('event', 'conversion', {'send_to': 'AW-17068094203/nJvOCMX-_OQaEPvl2co_'});">
             <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="vertical-align: middle; margin-right: 0.5rem;">
                 <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"/>
             </svg>
